fixed time condition and hour spacing

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ textarea {
 	padding: 20px;
 	margin-left: 15px;
 	text-align: right;
+	width: 100px;
 }
 
 .past {
